manifests/overlays/elenchos/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: track-web 
  name: track-web 
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: track-web
