manifests/overlays/elenchos/traefik-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
  selector:
    k8s-app: traefik-ingress-lb
  type: LoadBalancer
